# irodori-extension-cloud-spanner

./: Cargo.toml  README.md  connector.config.json  connector.source.json  irodori.extension.json
native/source/: README.md
src/: driver.rs  lib.rs
tools/: connector_metadata_presets.json
